# ananos

./: Cargo.toml  Makefile  README.md  run.sh  rust-toolchain  shell.nix  specification.md  test-simple.adb  test.adb  test.s  x86_64-none-efi.json
.cargo/: config  config.toml
boot/: Cargo.toml
boot-en-train/: Cargo.toml
boot-en-train/src/: main.rs
boot/src/: main.rs
docs/: README.md  core-types.md  disk-format.md  drivers.md  executable-format.md  introduction.md  notes.md  security.md  system-calls.md  type-system.md  vdb.md
docs/notes/: context-switch.md
src/: apps.rs  cmos.rs  framework.rs  gdt.rs  interrupt.rs  lib.rs  main.rs  memory.rs  pci.rs  serial.rs  vga.rs  vm.rs
src/allocator/: fixed_size.rs  linked_list.rs  mod.rs
src/db/: mod.rs
src/process/: mod.rs  scheduler.rs
src/task/: executor.rs  keyboard.rs  mod.rs  simple_executor.rs
tests/: basic_boot.rs  heap_alloc.rs  stack_overflow.rs
