[package]
name = "bananos"
version = "0.1.0"
authors = ["Ana Gelez <ana@gelez.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4.11", default-features = false }
uefi = "0.7"
uefi-services = "0.4"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
