[package]
name = "os"
version = "0.1.0"
authors = ["Ana Gelez <ana@gelez.xyz>"]
edition = "2018"

[dependencies]
acpi = "3.0.0"
adb = { git = "https://github.com/WartaPoirier-corp/ananos-db", rev = "de8a6702392033a30a19a86ad4bde1a9c7fe539c", features = ["no_std"] }
bootloader = { version = "0.10.1" }
crossbeam-queue = { version = "0.2.1", default-features = false, features = ["alloc"] }
conquer-once = { version = "0.2.1", default-features = false }
futures-util = { version = "0.3.6", default-features = false, features = ["alloc"] }
lazy_static = { version = "1.4.0", features = [ "spin_no_std" ] }
pc-keyboard = "0.5.1"
pic8259 = "0.10.1"
spin = "0.7.0"
volatile = "0.2.6"
uart_16550 = "0.2.10"
x86_64 = "0.14.0"

[workspace]
members = ["boot-en-train"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", # Make it easy to exit QEMU when all tests finished
    "-serial", "stdio", # Redirect serial port output to STDOUT (for easier debugging/testing)
    "-display", "none" # Hide the window when running tests
]
test-success-exit-code = 33
test-timeout = 300

[package.metadata.bootloader]
map-physical-memory = true
physical-memory-offset = 0x0000_4000_0000_0000

[[test]]
name = "stack_overflow"
harness = false
